--- a/css/styles.css
+++ b/css/styles.css
@@ -23,17 +23,6 @@ body{
     overflow-x: hidden ;
 }
  
-/* .container1{
-    width: 100%;
-    height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.3),transparent),url(/assets/pexels-jakub-novacek-924824.jpg);
-    background-size: cover;
-    background-position: center;
-    padding: 0 8%;
-    position: relative;
-}  */
-
-
  .container1{
     position: relative;
     width: 100%;
@@ -142,7 +131,6 @@ nav ul li a:hover::after{
     }
 }
 
-
 .name h2{
     font-size: 30px;
     font-weight: 500;
@@ -180,16 +168,10 @@ nav ul li a:hover::after{
     cursor: pointer;
 }
 
-/* .name .name-tags a:active{
-    box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2);
-    transform: scale(1.02) translateY(-4px);
-} */
 .name-tags a:hover{
     box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2);
     transform: scale(1.02) translateY(-4px);
 }
-
-
 
 .name a{
     color: white;
@@ -224,7 +206,7 @@ nav ul li a:hover::after{
 }
 
 /* this is the background animation */
- /* .bubbles{
+  .bubbles{
     position: relative;
     display: flex;
     
@@ -251,7 +233,7 @@ nav ul li a:hover::after{
     box-shadow: 0 0 0 10px #ff2d7544,
     0 0 50px #ff2d75,
     0 0 100px #ff2d75;
-} */
+} 
 
 @keyframes animate
 {
@@ -332,10 +314,6 @@ nav ul li a:hover::after{
         text-decoration: underline;
     }
 
-
-
-
-
 /* this is the service section */
 
 #services{
@@ -405,9 +383,7 @@ nav ul li a:hover::after{
     margin-left: 20px;
     color: blueviolet;
     position: absolute;
-    font-size: 35px;
-    
-    
+    font-size: 35px;   
 }
 
 .problem{
@@ -437,21 +413,18 @@ nav ul li a:hover::after{
     align-items: flex-start;
    position: relative;
    top: 200px;
-   font-size: 25px;
+   font-size: 40px;
 }
 
-/* .social2 span{
-    text-decoration: none;
-    color: #f8f7f9;
-    font-size: 20px;
-    margin-left: 25px;
-    top: 10px;
-    position: relative;
-}
 
 .social2 span{
     top: 20px;
-} */
+} 
+
+.social2:hover{
+    transform: scale(1.25);
+    opacity: 0.8; 
+}
 
 .namely{
     width: 30%;
@@ -491,7 +464,7 @@ nav ul li a:hover::after{
 .submit{
     background-color: blueviolet;
     border-radius: 290486px;
-   /* box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);  */
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);  
    color: #f8f7f9;
    display: inline-block;
    font-size: 0.875rem;
@@ -514,7 +487,6 @@ nav ul li a:hover::after{
     opacity: 0.7;
     box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2);
     
-
 }
 
 
@@ -573,12 +545,11 @@ top: 10px;
 
 .brands li:hover{
     transform: scale(1.25);
-    opacity: 0.8;
 }
 
-.brands:hover{
+/* .brands:hover{
 opacity: 0.7;
-}
+} */
 
 .imprint{
 display: flex;
